test/fail/outrange-nat64.as
let _ = 18_446_744_073_709_551_615 : Nat64;

let _ = natToNat64 (2 ** 64);
